more design changes

--- a/templates/de/adress/adress2.html
+++ b/templates/de/adress/adress2.html
@@ -9,7 +9,7 @@
         <h1> Adresse 2/5</h1>
         <ul>
             <li>
-                <label for="street">Straße:</label>
+                <label for="street">Straße</label>
                 <input type="text" name="street" id="street" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
                 <span class="extra-info">
                     <details>
@@ -24,7 +24,7 @@
                 </span>
             </li>
             <li>
-                <label for="street_nr">Hausnummer:</label>
+                <label for="street_nr">Hausnummer</label>
                 <input type="text" id="street_nr" name="street_nr" required>
                 <span class="extra-info">
                     <details>
@@ -36,7 +36,7 @@
                 </span>
             </li>
             <li>
-                <input type="button" value="Back" onClick="javascript:history.back()">
+                <input type="button" value="Zurück" onClick="javascript:history.back()">
                 <input type="submit" value='Senden'>
             </li>
         </ul>
