--- a/templates/de/adress/adress4.html
+++ b/templates/de/adress/adress4.html
@@ -9,7 +9,7 @@
         <h1> Adresse 4/5</h1>
         <ul>
             <li>
-                <label for="zip_code">PLZ:</label>
+                <label for="zip_code">PLZ</label>
                 <input type="text" id="zip_code" name="zip_code" pattern="[0-9]{5}$" required>
                 <span class="extra-info">
                     <details>
@@ -21,7 +21,7 @@
                 </span>
             </li>
             <li>
-                <label for="city">Stadt:</label>
+                <label for="city">Stadt</label>
                 <input type="text" id="city" name="city" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
                 <span class="extra-info">
                     <details>
@@ -33,7 +33,7 @@
                 </span>
             </li>
             <li>
-                <input type="button" value="Back" onClick="javascript:history.back()">
+                <input type="button" value="Zurück" onClick="javascript:history.back()">
                 <input type="submit" value='Senden'>
             </li>
         </ul>
