--- a/templates/de/general_information/general_information1.html
+++ b/templates/de/general_information/general_information1.html
@@ -8,7 +8,7 @@
     <h1>Allgemeine Informationen 1/3</h1>
     <ul>
         <li>
-            <label for="">Geschlecht:</label>
+            <label for="">Geschlecht</label>
             <input type="radio" name="gender" id="radioMale" required> Männlich
             <input type="radio" name="gender" id="radioFemale"> Weiblich
             <span>
@@ -20,7 +20,7 @@
             </span>
         </li>
         <li>
-            <input type="button" value="Back" onClick="javascript:history.back()">
+            <input type="button" value="Zurück" onClick="javascript:history.back()">
             <input type="submit" value="Senden">
         </li>
     </ul>
