--- a/templates/de/general_information/general_information2.html
+++ b/templates/de/general_information/general_information2.html
@@ -8,7 +8,7 @@
     <h1>Allgemeine Informationen 2/3</h1>
     <ul>
         <li>
-            <label for="fName">Vorname:</label>
+            <label for="fName">Vorname</label>
             <input type="text" name="firstName" id="fName" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
             <span>
                 <details>
@@ -21,7 +21,7 @@
             </span>
         </li>
         <li>
-            <label for="lastName">Nachname:</label>
+            <label for="lastName">Nachname</label>
             <input type="text" name="lastName" id="lName" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
             <span>
                 <details>
@@ -34,7 +34,7 @@
             </span>
         </li>
         <li>
-            <input type="button" value="Back" onClick="javascript:history.back()">
+            <input type="button" value="Zurück" onClick="javascript:history.back()">
             <input type="submit" value="Senden">
         </li>
     </ul>
