--- a/templates/de/general_information/general_information3.html
+++ b/templates/de/general_information/general_information3.html
@@ -8,7 +8,7 @@
     <h1>Allgemeine Informationen 3/3</h1>
     <ul>
         <li>
-            <label for="dateOfBirth">Geburtsdatum:</label>
+            <label for="dateOfBirth">Geburtsdatum</label>
             <input type="date" name="dateOfBirth" id="dob" required>
             <span>
                 <details>
@@ -20,7 +20,7 @@
             </span>
         </li>
         <li>
-            <input type="button" value="Back" onClick="javascript:history.back()">
+            <input type="button" value="Zurück" onClick="javascript:history.back()">
             <input type="submit" value="Senden">
         </li>
     </ul>
