--- a/templates/de/payment_methods/payment_methods1.html
+++ b/templates/de/payment_methods/payment_methods1.html
@@ -26,7 +26,7 @@
                 </span>
             </li>
             <li>
-                <input type="button" value="Back" onClick="javascript:history.back()">
+                <input type="button" value="Zurück" onClick="javascript:history.back()">
                 <input type="submit" value="Senden"><br>
             </li>
         </ul>
