--- a/templates/de/sepa/sepa2.html
+++ b/templates/de/sepa/sepa2.html
@@ -9,7 +9,7 @@
     <h1>SEPA-Lastschriftmandat 2/4</h1>
     <ul>
         <li>
-            <label for="street">Starße:</label>
+            <label for="street">Starße</label>
             <input type="text" id="street" name="street" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
             <span>
                 <details>
@@ -23,7 +23,7 @@
             </span>
         </li>
         <li>
-            <label for="home_nr">Hausnummer:</label>
+            <label for="home_nr">Hausnummer</label>
             <input type="text" id="street_nr" name="street_nr" required>
             <span>
                 <details>
@@ -35,7 +35,7 @@
             </span>
         </li>
         <li>
-            <input type="button" value="Back" onClick="javascript:history.back()">
+            <input type="button" value="Zurück" onClick="javascript:history.back()">
             <input type="submit" value="Senden">
         </li>
     </ul>
