--- a/templates/de/sepa/sepa3.html
+++ b/templates/de/sepa/sepa3.html
@@ -9,7 +9,7 @@
     <h1>SEPA-lastschriftmandat 3/4</h1>
     <ul>
         <li>
-            <label for="ZIP_code">PLZ:</label>
+            <label for="ZIP_code">PLZ</label>
             <input type="text" id="ZIP_code" name="ZIP_code" pattern="[0-9]{5}$" required>
             <span>
                 <details>
@@ -23,7 +23,7 @@
             </span>
         </li>
         <li>
-            <label for="area">Stadt:</label>
+            <label for="area">Stadt</label>
             <input type="text" id="area" name="area" required>
             <span>
                 <details>
@@ -35,7 +35,7 @@
             </span>
         </li>
         <li>
-            <input type="button" value="Back" onClick="javascript:history.back()">
+            <input type="button" value="Zurück" onClick="javascript:history.back()">
             <input type="submit" value="Senden">
         </li>
     </ul>
