--- a/templates/en/sepa/sepa3.html
+++ b/templates/en/sepa/sepa3.html
@@ -9,7 +9,7 @@
     <h1>SEPA direct debit mandate 3 of 4</h1>
     <ul>
         <li>
-            <label for="ZIP_code">ZIP:</label>
+            <label for="ZIP_code">ZIP</label>
             <input type="text" id="ZIP_code" name="ZIP_code" pattern="[0-9]{5}$"  required>
             <span><details>
                 <summary>
@@ -20,7 +20,7 @@
             </details> </span>
         </li>
         <li>
-            <label for="area">City:</label>
+            <label for="area">City</label>
             <input type="text" id="area" name="area" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
             <span><details>
                 <summary>
