--- a/templates/de/adress/adress1.html
+++ b/templates/de/adress/adress1.html
@@ -9,7 +9,7 @@
         <h1> Adresse 1/5</h1>
         <ul>
             <li>
-                <label for="date_registered">Datum der Anmeldung:</label>
+                <label for="date_registered">Datum der Anmeldung</label>
                 <input type="date" id="date_registered" name="date_reg" required>
                 <span>
                     <details>
@@ -21,7 +21,7 @@
                 </span>
             </li>
             <li>
-                <input type="button" value="Back" onClick="javascript:history.back()">
+                <input type="button" value="Zurück" onClick="javascript:history.back()">
                 <input type="submit" value='Senden'>
             </li>
         </ul>
