--- a/templates/de/adress/adress3.html
+++ b/templates/de/adress/adress3.html
@@ -8,7 +8,7 @@
     <form action="/{{language}}/gez/adress" method="POST">
         <h1> Adresse 3/5</h1>
         <li>
-            <label for="adress_additions">Adresszusatz (optional):</label>
+            <label for="adress_additions">Adresszusatz (optional)</label>
             <input type="text" id="adress_additions" name="adress_additions" >
             <span class="extra-info">
                 <details>
@@ -21,7 +21,7 @@
             </span>
         </li>
         <li>
-            <input type="button" value="Back" onClick="javascript:history.back()">
+            <input type="button" value="Zurück" onClick="javascript:history.back()">
             <input type="submit" value='Senden'>
         </li>
         </ul>
