--- a/templates/de/adress/adress5.html
+++ b/templates/de/adress/adress5.html
@@ -9,7 +9,7 @@
         <h1> Adresse 5/5</h1>
         <ul>
             <li>
-                <label for="phone_number">Telefonnummer: (Optional)</label>
+                <label for="phone_number">Telefonnummer (Optional)</label>
                 <input type="tel" id="phone_number" name="phone_number">
                 <span class="extra-info">
                     <details>
@@ -20,7 +20,7 @@
                 </span>
             </li>
             <li>
-                <input type="button" value="Back" onClick="javascript:history.back()">
+                <input type="button" value="Zurück" onClick="javascript:history.back()">
                 <input type="submit" value='Senden'>
             </li>
         </ul>
