--- a/templates/de/sepa/sepa1.html
+++ b/templates/de/sepa/sepa1.html
@@ -9,7 +9,7 @@
     <h1>SEPA-Lastschriftmandat 1/4</h1>
     <ul>
         <li>
-            <label for="name">Name:</label>
+            <label for="name">Name</label>
             <input type="text" name="fullName" id="name" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
             <span>
                 <details>
@@ -22,7 +22,7 @@
             </details>
         </li>
         <li>
-            <input type="button" value="Back" onClick="javascript:history.back()">
+            <input type="button" value="Zurück" onClick="javascript:history.back()">
             <input type="submit" value="Senden">
         </li>
     </ul>
