--- a/templates/de/sepa/sepa4.html
+++ b/templates/de/sepa/sepa4.html
@@ -9,7 +9,7 @@
     <h1>SEPA-Lastschriftmandat 4/5</h1>
     <ul>
         <li>
-            <label for="IBAN">IBAN:</label>
+            <label for="IBAN">IBAN</label>
             <input type="text" id="IBAN" name="IBAN" pattern="\p{Upper}{2}[0-9]{20}$" required>
             <span>
                 <details>
@@ -21,7 +21,7 @@
             </span>
         </li>
         <li>
-            <label for="BIC">BIC:</label>
+            <label for="BIC">BIC</label>
             <input type="text" id="BIC" name="BIC" pattern="[^\p{Lower}]{7,8}[0-9]{0,4}$" required>
             <span>
                 <details>
@@ -33,7 +33,7 @@
             </span>
         </li>
         <li>
-            <label for="credit_institution">Kreditinstitut:</label>
+            <label for="credit_institution">Kreditinstitut</label>
             <input type="text" id="credit_institution" name="credit_institution" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
             <span>
                 <details>
@@ -45,7 +45,7 @@
             </span>
         </li>
         <li>
-            <input type="button" value="Back" onClick="javascript:history.back()">
+            <input type="button" value="Zurück" onClick="javascript:history.back()">
             <input type="submit" value="Senden">
         </li>
     </ul>
