--- a/templates/en/adress/adress1.html
+++ b/templates/en/adress/adress1.html
@@ -9,7 +9,7 @@
         <h1> Address 1 of 5</h1>
         <ul>
             <li>
-                <label for="date_registered">Date registered:</label>
+                <label for="date_registered">Date registered</label>
                 <input type="date" id="date_registered" name="date_reg" required>
                 <span> <details><summary>
                     Help?
