--- a/templates/en/adress/adress2.html
+++ b/templates/en/adress/adress2.html
@@ -9,7 +9,7 @@
         <h1> Address 2 of 5</h1>
         <ul>
             <li>
-    <label for="street">Street:</label>
+    <label for="street">Street</label>
     <input type="text" name="street" id="street" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
     <span class="extra-info"> <details><summary>
         Help?
@@ -23,7 +23,7 @@
     </span>
 </li>
 <li>
-    <label for="street_nr">Street-number:</label>
+    <label for="street_nr">Street-number</label>
     <input type="text" id="street_nr" name="street_nr" required>
     <span class="extra-info"><details><summary>
         Help?
