--- a/templates/en/adress/adress3.html
+++ b/templates/en/adress/adress3.html
@@ -8,7 +8,7 @@
     <form action="/{{language}}/gez/adress3" method="POST">
         <h1> Address 3 of 5</h1>
         <li>
-            <label for="adress_additions">Adress additions(optional) :</label>
+            <label for="adress_additions">Adress additions(optional)</label>
             <input type="text" id="adress_additions" name="adress_additions">
             <span class="extra-info"><details><summary>
                 Help?
