--- a/templates/en/adress/adress4.html
+++ b/templates/en/adress/adress4.html
@@ -8,7 +8,7 @@
     <form action="/{{language}}/gez/adress4" method="POST">
         <h1> Address 4 of 5</h1>
         <ul> <li>
-            <label for="zip_code">ZIP Code:</label>
+            <label for="zip_code">ZIP Code</label>
             <input type="text" id="zip_code" name="zip_code" pattern="[0-9]{5}$"  required>
             <span class="extra-info"><details><summary>Help?
 
@@ -20,7 +20,7 @@
         </span>
         </li>
         <li>
-            <label for="city">City:</label>
+            <label for="city">City</label>
             <input type="text" id="city" name="city" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
             <span class="extra-info"><details><summary>Help?
 
