--- a/templates/en/adress/adress5.html
+++ b/templates/en/adress/adress5.html
@@ -9,7 +9,7 @@
         <h1> Address 5 of 5</h1>
         <ul>
         <li>
-            <label for="phone_number">Phone number: (Optional)</label>
+            <label for="phone_number">Phone number (Optional)</label>
             <input type="tel" id="phone_number" name="phone_number">
             <span class="extra-info"><details><summary>Help?
 
