--- a/templates/en/sepa/sepa2.html
+++ b/templates/en/sepa/sepa2.html
@@ -9,7 +9,7 @@
     <h1>SEPA direct debit mandate 2 of 4</h1>
     <ul>
         <li>
-            <label for="street">Street:</label>
+            <label for="street">Street</label>
             <input type="text" id="street" name="street" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
             <span><details>
                 <summary>
@@ -19,7 +19,7 @@
             </details> </span>
         </li>
         <li>
-            <label for="home_nr">Street number:</label>
+            <label for="home_nr">Street number</label>
             <input type="text" id="street_nr" name="street_nr" required>
             <span><details>
                 <summary>
