--- a/templates/bg/register.html
+++ b/templates/bg/register.html
@@ -59,7 +59,7 @@
             <span>Изберете езика, който искате да използвате</span>
         </li>
         <li>
-            <input type="submit" value="Senden" onclick='checkPasswordValidity()'>
+            <input type="submit" value="Изпращане" onclick='checkPasswordValidity()'>
         </li>
     </ul>
 </form>
