--- a/templates/fr/adress/adress1.html
+++ b/templates/fr/adress/adress1.html
@@ -19,8 +19,8 @@
                 </details></span>
             </li>
             <li>
-                <input type="button" value="Back" onClick="javascript:history.back()">
-                <input type="submit" value='submit'>
+                <input type="button" value="Dos" onClick="javascript:history.back()">
+                <input type="submit" value='Envoyer'>
             </li>
         </ul>
         </form>
