--- a/templates/fr/adress/adress5.html
+++ b/templates/fr/adress/adress5.html
@@ -11,7 +11,7 @@
         <li>
             <label for="phone_number">Numéro de téléphone (facultatif)</label>
             <input type="tel" id="phone_number" name="phone_number">
-            <span class="extra-info"><details><summary>Help?
+            <span class="extra-info"><details><summary>Aider?
 
             </summary>
             Si vous souhaitez être contacté par téléphone, veuillez entrer votre numéro de téléphone. C'est complètement optionnel. Sans cela, vous ne recevriez que des lettres.
@@ -20,8 +20,8 @@
             </span>
         </li>
         <li>
-            <input type="button" value="Back" onClick="javascript:history.back()">
-            <input type="submit" value='submit'>
+            <input type="button" value="Dos" onClick="javascript:history.back()">
+            <input type="submit" value='Envoyer'>
         </li>
 
     </ul>
