--- a/templates/fr/payment_methods/payment_methods1.html
+++ b/templates/fr/payment_methods/payment_methods1.html
@@ -24,8 +24,8 @@
                 </span>
             </li>
             <li>
-                <input type="button" value="Back" onClick="javascript:history.back()">
-                <input type="submit" value="Submit"><br>
+                <input type="button" value="Dos" onClick="javascript:history.back()">
+                <input type="submit" value="Envoyer"><br>
                 
             </li>            
         </ul>
