--- a/templates/fr/register.html
+++ b/templates/fr/register.html
@@ -60,7 +60,7 @@
             <span>Choisissez la langue que vous souhaitez utiliser</span>
         </li>
         <li>
-            <input type="submit" value="Submit" onclick=checkPasswordValidity()>
+            <input type="submit" value="Envoyer" onclick=checkPasswordValidity()>
         </li>
     </ul>
 </form>
