--- a/templates/fr/sepa/sepa3.html
+++ b/templates/fr/sepa/sepa3.html
@@ -32,8 +32,8 @@
                 </details> </span>
         </li>
         <li>
-            <input type="button" value="Back" onClick="javascript:history.back()">
-            <input type="submit" value="Submit">
+            <input type="button" value="Dos" onClick="javascript:history.back()">
+            <input type="submit" value="Envoyer">
         </li>
     </ul>
 </form>
