--- a/templates/fr/welcome.html
+++ b/templates/fr/welcome.html
@@ -46,8 +46,8 @@
                 <li>
                     <ul>
                         <li>
-                            <input type="submit" value="Submit">
-                            <input type="button" value="Use as a Guest">
+                            <input type="submit" value="Envoyer">
+                            <input type="button" value="En tant qu'invité">
                         </li>
                     </ul>
                     
@@ -89,7 +89,7 @@
     </p>
 
     <button class="cookie-btn">
-        Okay
+        d'accord
     </button>
 </div>
 <script type="text/javascript" src="{{url_for('static', filename='javascript/cookieConsent.js')}}"></script>
