--- a/templates/bg/adress/adress4.html
+++ b/templates/bg/adress/adress4.html
@@ -33,8 +33,8 @@
             </span>
         </li>
         <li>
-            <input type="button" value="Back" onClick="javascript:history.back()">
-            <input type="submit" value='submit'>
+            <input type="button" value="обратно" onClick="javascript:history.back()">
+            <input type="submit" value='Изпращане'>
         </li>
 
     </ul>
