--- a/templates/bg/general_information/general_information2.html
+++ b/templates/bg/general_information/general_information2.html
@@ -31,8 +31,8 @@
             </details></span>
         </li>
         <li>
-               <input type="button" value="Back" onClick="javascript:history.back()">
-            <input type="submit" value="Submit">
+               <input type="button" value="обратно" onClick="javascript:history.back()">
+            <input type="submit" value="Изпращане">
             
              
             
