--- a/templates/bg/payment_methods/payment_methods1.html
+++ b/templates/bg/payment_methods/payment_methods1.html
@@ -25,8 +25,8 @@
                 </span>
             </li>
             <li>
-                <input type="button" value="Back" onClick="javascript:history.back()">
-                <input type="submit" value="Submit"><br>
+                <input type="button" value="обратно" onClick="javascript:history.back()">
+                <input type="submit" value="Изпращане"><br>
                 
             </li>            
         </ul>
