--- a/templates/bg/sepa/sepa1.html
+++ b/templates/bg/sepa/sepa1.html
@@ -21,8 +21,8 @@
         </li>
         
         <li>
-            <input type="button" value="Back" onClick="javascript:history.back()">
-            <input type="submit" value="Submit">
+            <input type="button" value="обратно" onClick="javascript:history.back()">
+            <input type="submit" value="Изпращане">
         </li>
         </ul>
     </form>
