--- a/templates/bg/welcome.html
+++ b/templates/bg/welcome.html
@@ -49,8 +49,8 @@
         <li>
             <ul>
                 <li>
-                    <input type="submit" value="Submit">
-                    <input type="button" value="Use as a Guest">
+                    <input type="submit" value="Изпращане">
+                    <input type="button" value="използвайте като гост">
                 </li>
             </ul>
 
@@ -93,7 +93,7 @@
     </p>
 
     <button class="cookie-btn">
-        Okay
+        добре
     </button>
 </div>
 <script type="text/javascript" src="{{url_for('static', filename='javascript/cookieConsent.js')}}"></script>
