--- a/templates/fr/general_information/general_information1.html
+++ b/templates/fr/general_information/general_information1.html
@@ -18,8 +18,8 @@
             </details></span>
         </li>
         <li>
-               <input type="button" value="Back" onClick="javascript:history.back()">
-            <input type="submit" value="Submit">
+               <input type="button" value="Dos" onClick="javascript:history.back()">
+            <input type="submit" value="Envoyer">
             
              
             
