--- a/templates/fr/sepa/sepa1.html
+++ b/templates/fr/sepa/sepa1.html
@@ -23,8 +23,8 @@
         </li>
         
         <li>
-            <input type="button" value="Back" onClick="javascript:history.back()">
-            <input type="submit" value="Submit">
+            <input type="button" value="Dos" onClick="javascript:history.back()">
+            <input type="submit" value="Envoyer">
         </li>
         </ul>
     </form>
