--- a/templates/bg/adress/adress5.html
+++ b/templates/bg/adress/adress5.html
@@ -11,7 +11,7 @@
         <li>
             <label for="phone_number">Телефон: (опционално)</label>
             <input type="tel" id="phone_number" name="phone_number">
-            <span class="extra-info"><details><summary>Help?
+            <span class="extra-info"><details><summary>Помощ?
 
             </summary>
             Ако искате да се свържем с Вас по телефон, моля, въведете Вашия телефонен номер. Той е напълно опционален. Без него бихте получавали само писма.
