--- a/templates/de/adress/adress2.html
+++ b/templates/de/adress/adress2.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block body %}
 <div class="pers-fields">
-    <form action="/{{language}}/gez/adress" method="POST">
+    <form action="/{{language}}/gez/adress2" method="POST">
         <h1> Adresse 2/5</h1>
         <ul>
             <li>
