--- a/templates/de/de_base.html
+++ b/templates/de/de_base.html
@@ -28,7 +28,7 @@
 
     <nav>
         <div class="topnav" id="myTopnav">
-            <a href="/en/home"><button class="active">Startseite</button></a>
+            <a href="/{{language}}/home"><button class="active">Startseite</button></a>
             <a href=""> <button class="document">Dokumente</button></a>
             <div>
                 <a href=""></a>
