--- a/templates/de/home.html
+++ b/templates/de/home.html
@@ -13,7 +13,7 @@
                 <a href="">Wohnungsanmeldung</a>
         </li>
         <li>
-                <a href='/en/gez/gez_explanation'> GEZ</a>
+                <a href='/{{language}}/gez/gez_explanation'> GEZ</a>
         </li>
         <li>
                 <a href="">Kinderbetreuung</a>
