--- a/templates/de/register.html
+++ b/templates/de/register.html
@@ -3,7 +3,7 @@
 
 {% block head %}
 <!-- <title> ... </title>-->
-<title>GEZ</title>
+<title>Registrierung</title>
 {% endblock %}
 {% block body %}
 <script type="text/javascript" src="{{url_for('static', filename='javascript/register.js')}}"></script>
