--- a/templates/de/sepa/sepa2.html
+++ b/templates/de/sepa/sepa2.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block body %}
 
-<form action="/{{language}}/gez/sepa" method="POST">
+<form action="/{{language}}/gez/sepa2" method="POST">
     <h1>SEPA-Lastschriftmandat 2/4</h1>
     <ul>
         <li>
