--- a/templates/de/sepa/sepa4.html
+++ b/templates/de/sepa/sepa4.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block body %}
 
-<form action="/{{language}}/gez/sepa" method="POST">
+<form action="/{{language}}/gez/sepa4" method="POST">
     <h1>SEPA-Lastschriftmandat 4/5</h1>
     <ul>
         <li>
