--- a/templates/en/welcome.html
+++ b/templates/en/welcome.html
@@ -28,7 +28,7 @@
 </form>
 <p>
 
-<form action="/{{language}}/" method="POST">
+<form action="/" method="POST">
     <h1>Login</h1>
     <ul>
         <li>
