--- a/templates/de/adress/adress3.html
+++ b/templates/de/adress/adress3.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block body %}
 <div class="pers-fields">
-    <form action="/{{language}}/gez/adress" method="POST">
+    <form action="/{{language}}/gez/adress3" method="POST">
         <h1> Adresse 3/5</h1>
         <li>
             <label for="adress_additions">Adresszusatz (optional)</label>
