--- a/templates/de/payment_methods/payment_methods1.html
+++ b/templates/de/payment_methods/payment_methods1.html
@@ -6,7 +6,7 @@
 {% block body %}
 
 <div class="pers-fields">
-    <form action="/{{language}}/gez/payment_methods" method="POST">
+    <form action="/{{language}}/gez/payment_methods1" method="POST">
         <h1>Angaben zu Zahlungsweise 1/2</h1>
         <ul>
             <li>
