--- a/templates/de/welcome.html
+++ b/templates/de/welcome.html
@@ -6,6 +6,7 @@
 
 {% block body %}
 
+<form id="welcometext">
 <h1>
     Willkomen!
 </h1>
@@ -24,7 +25,7 @@
     Wenn Sie mehr erfahren wollen, <b>über jedes Mitglied unseres Team,</b> dann klicken Sie bitte
     <a href="/{{language}}/about_us"> hier</a>.
 </p>
-
+</form>
 <p>
 
 <form action="/" method="POST">
