--- a/templates/en/en_base.html
+++ b/templates/en/en_base.html
@@ -27,8 +27,8 @@
 
     <nav>
         <div class="topnav" id="myTopnav">
-            <a href="/{{language}}/home"><button class="active">Homepage</button></a>
-            <a href=""> <button class="document">Documents</button></a>
+            <a href="/"><button class="active">Homepage</button></a>
+            <a href="/{{language}}/home"> <button class="document">Documents</button></a>
             <div>
                 <a href=""></a>
                 <a href="?lang=en"> <img src="{{url_for('static', filename='images/us.png')}}"> </a>
