--- a/templates/de/adress/adress4.html
+++ b/templates/de/adress/adress4.html
@@ -22,7 +22,7 @@
             </li>
             <li>
                 <label for="city">Stadt</label>
-                <input type="text" id="city" name="city" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
+                <input type="text" id="city" name="city" pattern="^[A-Za-zzßÄÖÜäöü]+(([-]|[\s])?[A-Za-zzßÄÖÜäöü]+)*" required>
                 <span class="extra-info">
                     <details>
                         <summary>Hilfe?</summary>
