--- a/templates/de/sepa/sepa2.html
+++ b/templates/de/sepa/sepa2.html
@@ -10,7 +10,7 @@
     <ul>
         <li>
             <label for="street">Starße</label>
-            <input type="text" id="street" name="street" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
+            <input type="text" id="street" name="street" pattern="^[A-Za-zzßÄÖÜäöü]+(([-]|[\s])?[A-Za-zzßÄÖÜäöü]+)*" required>
             <span>
                 <details>
                     <summary>Hilfe?</summary>
