--- a/templates/bg/adress/adress4.html
+++ b/templates/bg/adress/adress4.html
@@ -21,7 +21,7 @@
         </li>
         <li>
             <label for="city">Град:</label>
-            <input type="text" id="city" name="city" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
+            <input type="text" id="city" name="city" pattern="^[A-Za-zßÄÖÜäöü]+(([-]|[\s])?[A-Za-zßÄÖÜäöü]+)*" required>
             <span class="extra-info"><details><summary>Помощ?
 
             </summary>
