--- a/templates/bg/sepa/sepa2.html
+++ b/templates/bg/sepa/sepa2.html
@@ -10,7 +10,7 @@
     <ul>
         <li>
             <label for="street">Улица:</label>
-            <input type="text" id="street" name="street"  pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
+            <input type="text" id="street" name="street"  pattern="^[A-Za-zßÄÖÜäöü]+(([-]|[\s])?[A-Za-zßÄÖÜäöü]+)*" required>
             <span><details>
                 <summary>
                     Помощ?
