--- a/templates/bg/sepa/sepa3.html
+++ b/templates/bg/sepa/sepa3.html
@@ -20,7 +20,7 @@
         </li>
         <li>
             <label for="area">Град:</label>
-            <input type="text" id="area" name="area" required>
+            <input type="text" id="area" name="area" pattern="^[A-Za-zßÄÖÜäöü]+(([-]|[\s])?[A-Za-zßÄÖÜäöü]+)*" required>
             <span><details>
                 <summary>
                     Помощ?
