--- a/templates/de/sepa/sepa3.html
+++ b/templates/de/sepa/sepa3.html
@@ -24,7 +24,7 @@
         </li>
         <li>
             <label for="area">Stadt</label>
-            <input type="text" id="area" name="area" required>
+            <input type="text" id="area" name="area" pattern="^[A-Za-zzßÄÖÜäöü]+(([-]|[\s])?[A-Za-zzßÄÖÜäöü]+)*" required>
             <span>
                 <details>
                     <summary>Hilfe?</summary>
