--- a/templates/fr/adress/adress2.html
+++ b/templates/fr/adress/adress2.html
@@ -10,7 +10,7 @@
         <ul>
             <li>
     <label for="street">rue:</label>
-    <input type="text" name="street" id="street" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
+    <input type="text" name="street" id="street" pattern="^[A-Za-zßÄÖÜäöü]+(([-]|[\s])?[A-Za-zßÄÖÜäöü]+)*" required>
     <span class="extra-info"> <details><summary>
         Aider?
     </summary> 
