--- a/templates/fr/adress/adress4.html
+++ b/templates/fr/adress/adress4.html
@@ -21,7 +21,7 @@
         </li>
         <li>
             <label for="city">Ville:</label>
-            <input type="text" id="city" name="city" pattern="^[A-Za-z]+(([-]|[\s])?[A-Za-z]+)*" required>
+            <input type="text" id="city" name="city" pattern="^[A-Za-zzßÄÖÜäöü]+(([-]|[\s])?[A-Za-zzßÄÖÜäöü]+)*" required>
             <span class="extra-info"><details><summary>Aider?
 
             </summary>
