--- a/templates/fr/sepa/sepa3.html
+++ b/templates/fr/sepa/sepa3.html
@@ -22,7 +22,7 @@
         </li>
         <li>
             <label for="area">Ville:</label>
-            <input type="text" id="area" name="area" required>
+            <input type="text" id="area" name="area" pattern="^[A-Za-zßÄÖÜäöü]+(([-]|[\s])?[A-Za-zßÄÖÜäöü]+)" required>
             <span><details>
                 <summary>
                     Aider?
