--- a/templates/bg/home.html
+++ b/templates/bg/home.html
@@ -9,7 +9,7 @@
 <h2> Моля, изберете документа, от когото се нуждаете: </h2>
 <ul>
         <li>
-                <a href="">Адресна регистрация</a>
+                <a href="">Регистрация на дома</a>
         </li>
         <li>
                 <a href="/{{language}}/gez/general_information"> Адресна регистрация</a>
