--- a/templates/de/de_base.html
+++ b/templates/de/de_base.html
@@ -38,7 +38,7 @@
             </div>
             <div>
                 <a href=""></a>
-                <a href="/{{language}}/about"><button class="about_and_logout">Über uns</button></a>
+                <a href="/{{language}}/about_us"><button class="about_and_logout">Über uns</button></a>
                 <a href=""><button class="about_and_logout">Logout</button></a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
             </div>
