bug fix welcome seite

--- a/templates/bg/welcome.html
+++ b/templates/bg/welcome.html
@@ -48,10 +48,11 @@
         </li>
         <li>
             <ul>
+                <h3></h3>
                 <li>
                     <input type="submit" value="Изпращане">
-                    <input type="button" value="използвайте като гост">
                 </li>
+                <li></li>
             </ul>
 
         </li>
@@ -65,16 +66,25 @@
 
         </li>
     </ul>
-    <ul>
-        <li>
-            <h2>
-                Ако не искате да създавате акаунт, можете да кликнете тук!
-            </h2>
-            <br>
-            <a href="/{{language}}/home"> С какво можем да Ви помогнем?</a>
-        </li>
-    </ul>
+</form>
 
+<form action="">
+    <ul>
+        <h2>
+            Don't want to create an account. <br>
+            Keep on as a guest by choosing a document you need help with.
+        </h2>
+        <li class="listCenter">
+            <a href=" "> Appartement registration</a>
+        </li>
+        <li class="listCenter">
+            <a href="/{{language}}/gez/gez_explanation"> GEZ</a>
+        </li>
+        <li class="listCenter">
+            <a href=" ">Child care</a>
+        </li>
+        <li></li>
+    </ul>
 </form>
 </p>
 
