--- a/templates/fr/welcome.html
+++ b/templates/fr/welcome.html
@@ -47,7 +47,6 @@
                     <ul>
                         <li>
                             <input type="submit" value="Envoyer">
-                            <input type="button" value="En tant qu'invité">
                         </li>
                     </ul>
                     
@@ -55,23 +54,32 @@
             </ul>
         
             <ul>
+                <h3>Vous n'avez pas de compte. Créez-en un ici.</h3>
                 <li>
-                    <a href="/{{language}}/register">
-                        <p id="reg">S'inscrire</p>
-                    </a>
-                    
+                    <a href="/{{language}}/register">S'inscrire</a> 
                 </li>
-            </ul>
-            <ul>
-                <li>
-                    <h2>
-                        Si vous ne souhaitez pas créer de compte, vous pouvez cliquer ici!
-                    </h2>
-                    <br>
-                    <a href= "/{{language}}/home"> Où pouvons-nous vous aider?</a>
-                </li>
+                <li></li>
             </ul>
         
+        </form>
+
+        <form action="">
+            <ul>
+                <h2>
+                    Don't want to create an account. <br>
+                    Keep on as a guest by choosing a document you need help with.
+                </h2>
+                <li class="listCenter">
+                    <a href=" "> Appartement registration</a>
+                </li>
+                <li class="listCenter">
+                    <a href="/{{language}}/gez/gez_explanation"> GEZ</a>
+                </li>
+                <li class="listCenter">
+                    <a href=" ">Child care</a>
+                </li>
+                <li></li>
+            </ul>
         </form>
 </p>
 
