--- a/templates/bg/welcome.html
+++ b/templates/bg/welcome.html
@@ -71,8 +71,8 @@
 <form action="">
     <ul>
         <h2>
-            Don't want to create an account. <br>
-            Keep on as a guest by choosing a document you need help with.
+            Je ne veux pas créer de compte. <br>
+            Continuez en tant qu'invité en choisissant un document pour lequel vous avez besoin d'aide.
         </h2>
         <li class="listCenter">
             <a href=" "> Appartement registration</a>
