--- a/templates/fr/welcome.html
+++ b/templates/fr/welcome.html
@@ -66,8 +66,8 @@
         <form action="">
             <ul>
                 <h2>
-                    Don't want to create an account. <br>
-                    Keep on as a guest by choosing a document you need help with.
+                    Ако не искате да създавате акаунт. <br>
+                    Може да използвате сайта като гост.
                 </h2>
                 <li class="listCenter">
                     <a href=" "> Appartement registration</a>
