--- a/templates/fr/welcome.html
+++ b/templates/fr/welcome.html
@@ -66,8 +66,8 @@
         <form action="">
             <ul>
                 <h2>
-                    Ако не искате да създавате акаунт. <br>
-                    Може да използвате сайта като гост.
+                    Je ne veux pas créer de compte. <br>
+                    Continuez en tant qu'invité en choisissant un document pour lequel vous avez besoin d'aide.
                 </h2>
                 <li class="listCenter">
                     <a href=" "> Appartement registration</a>
