welcome html bug fix

--- a/templates/bg/welcome.html
+++ b/templates/bg/welcome.html
@@ -47,24 +47,16 @@
             <span>Напишете паролата Ви тук</span>
         </li>
         <li>
-            <ul>
-                <h3></h3>
-                <li>
-                    <input type="submit" value="Изпращане">
-                </li>
-                <li></li>
-            </ul>
-
+            <input type="submit" value="Изпращане">
         </li>
     </ul>
 
     <ul>
-        <li>
-            <a href="/{{language}}/register">
-                <p id="reg">Регистрация</p>
-            </a>
-
+        <h3>You don't have an account. Create one right here.</h3>
+        <li class="listCenter">
+            <a href="/{{language}}/register"> Регистрация</a>
         </li>
+        <li></li>
     </ul>
 </form>
 
@@ -75,13 +67,13 @@
             Може да използвате сайта като гост.
         </h2>
         <li class="listCenter">
-            <a href=" "> Appartement registration</a>
+            <a href=" ">Регистрация на дома</a>
         </li>
         <li class="listCenter">
             <a href="/{{language}}/gez/gez_explanation"> GEZ</a>
         </li>
         <li class="listCenter">
-            <a href=" ">Child care</a>
+            <a href=" ">Защита на детето</a>
         </li>
         <li></li>
     </ul>
