--- a/templates/de/welcome.html
+++ b/templates/de/welcome.html
@@ -7,24 +7,26 @@
 {% block body %}
 
 <form id="welcometext">
-<h1>
-    Willkomen!
-</h1>
-<p>Willkomen zu unserer Website! </p>
-<p>Wir sind Team A-5 und wir sind hier um Ihnen bei der Ausfüllung Ihrer Dokumente auszuhelfen, damit Sie
-    ein sorgenloses Leben in Deutschlangd haben!
-    Wir arbeiten daran jegliche notwendige Information für Sie zu übersetzen, als auch jeglichen Schritt genauestens zu
-    erklären.
-</p>
-<br>
+    <h1>
+        Willkomen!
+    </h1>
+    <p>Willkomen zu unserer Website! </p>
+    <p>Wir sind Team A-5 und wir sind hier um Ihnen bei der Ausfüllung Ihrer Dokumente auszuhelfen, damit Sie
+        ein sorgenloses Leben in Deutschlangd haben!
+        Wir arbeiten daran jegliche notwendige Information für Sie zu übersetzen, als auch jeglichen Schritt genauestens
+        zu
+        erklären.
+    </p>
+    <br>
 
-<p>
-    Unser Team besteht aus 6 Studenten der Hochschule Mannheim in Deutschland.
-    Wir nutzen unser gemeinsames Wissen und unsere Erfahrungen um in Kooperation mit unserer Fakultät für Sozialwesen
-    für Sie diese Seite zu erstellen. <br>
-    Wenn Sie mehr erfahren wollen, <b>über jedes Mitglied unseres Team,</b> dann klicken Sie bitte
-    <a href="/{{language}}/about_us"> hier</a>.
-</p>
+    <p>
+        Unser Team besteht aus 6 Studenten der Hochschule Mannheim in Deutschland.
+        Wir nutzen unser gemeinsames Wissen und unsere Erfahrungen um in Kooperation mit unserer Fakultät für
+        Sozialwesen
+        für Sie diese Seite zu erstellen. <br>
+        Wenn Sie mehr erfahren wollen, <b>über jedes Mitglied unseres Team,</b> dann klicken Sie bitte
+        <a href="/{{language}}/about_us"> hier</a>.
+    </p>
 </form>
 <p>
 
@@ -42,18 +44,13 @@
             <span>Geben Sie ihr Passwort ein</span>
         </li>
         <li>
-            <ul>
-                <li>
-                    <input type="submit" value="Submit">
-                </li>
-            </ul>
-
+            <input type="submit" value="Submit">
         </li>
     </ul>
 
     <ul>
         <h3>Sie haben keinen Account, hier können Sie sich registrieren</h3>
-        <li>
+        <li class="listCenter">
             <a href="/{{language}}/register">Registrieren</a>
         </li>
         <li></li>
