--- a/templates/en/welcome.html
+++ b/templates/en/welcome.html
@@ -48,7 +48,7 @@
 
     <ul>
         <h3>You don't have an account. Create one right here.</h3>
-        <li>
+        <li class="listCenter">
             <a href="/{{language}}/register">Register</a>
         </li>
         <li></li>
@@ -62,10 +62,10 @@
             Keep on as a guest by choosing a document you need help with.
         </h2>
         <li class="listCenter">
-            <a href=" "> Appartement registration</a>
+            <a href=" ">Appartement registration</a>
         </li>
         <li class="listCenter">
-            <a href="/{{language}}/gez/gez_explanation"> GEZ</a>
+            <a href="/{{language}}/gez/gez_explanation">GEZ</a>
         </li>
         <li class="listCenter">
             <a href=" ">Child care</a>
