--- a/templates/fr/welcome.html
+++ b/templates/fr/welcome.html
@@ -55,7 +55,7 @@
         
             <ul>
                 <h3>Vous n'avez pas de compte. Créez-en un ici.</h3>
-                <li>
+                <li class="listCenter">
                     <a href="/{{language}}/register">S'inscrire</a> 
                 </li>
                 <li></li>
@@ -70,13 +70,13 @@
                     Continuez en tant qu'invité en choisissant un document pour lequel vous avez besoin d'aide.
                 </h2>
                 <li class="listCenter">
-                    <a href=" "> Appartement registration</a>
+                    <a href=" "> Inscription de l'appartement</a>
                 </li>
                 <li class="listCenter">
                     <a href="/{{language}}/gez/gez_explanation"> GEZ</a>
                 </li>
                 <li class="listCenter">
-                    <a href=" ">Child care</a>
+                    <a href=" ">Garde d'enfants</a>
                 </li>
                 <li></li>
             </ul>
