--- a/templates/bg/welcome.html
+++ b/templates/bg/welcome.html
@@ -52,7 +52,7 @@
     </ul>
 
     <ul>
-        <h3>You don't have an account. Create one right here.</h3>
+        <h3>Ако нямате акаунт, създайте един тук.</h3>
         <li class="listCenter">
             <a href="/{{language}}/register"> Регистрация</a>
         </li>
