payment method fix

--- a/templates/de/payment_methods/payment_methods2.html
+++ b/templates/de/payment_methods/payment_methods2.html
@@ -11,8 +11,8 @@
         <ul>
             <li>
                 <label for="">Zahlungsart</label>
-                <input type="radio" id="sepa" name="type" value="1" required> Durch Lastschrift <br>
-                <input type="radio" id="bank_transfer" name="type" value="2"> Durch Überweisung
+                <input type="radio" id="sepa" name="type" value="sepa" required> Durch Lastschrift <br>
+                <input type="radio" id="bank_transfer" name="type" value="bank"> Durch Überweisung
                 <span>
                     <details>
                         <summary>Hilfe?</summary>
