gez explanation fix

--- a/templates/fr/gez_explanation.html
+++ b/templates/fr/gez_explanation.html
@@ -2,25 +2,35 @@
 
 
 
-{% block head %} 
-<title>GEZ</title> 
+{% block head %}
+<title>GEZ</title>
 {% endblock %}
 {% block body %}
-<h1>Bienvenue dans notre GEZ-help!</h1>
-<h2>Vous avez demandé de l'aide pour un document gez.</h2>
-<p>GEZ est la redevance de diffusion ici en Allemagne. Chaque appartement doit le payer, donc il n'y a pas d'échappatoire, si vous voulez vivre en Allemagne.</p>
-<p>Vous devez également être âgé d'au moins 18 ans pour payer les frais de licence.</p>
-<p>Après avoir soumis le formulaire, vous devrez payer les frais régulièrement.</p>
-<p>Bien que cela puisse être ennuyeux de payer, vous ne devez remplir le document qu'une seule fois, tant que vous vivez dans votre appartement actuel.</p>
-<p>Les médias publics sont soutenus par cet argent. Ces médias sont indépendants des entreprises privées qui veulent manipuler la portée du droit public à leurs propres fins.</p>
-<h3>Nous divisons le document en plusieurs petites parties.</h3>
-<ul>
-    <li>Tout d'abord, nous avons besoin de vos informations générales, telles que votre nom ou votre date de naissance</li>
-    <li>Deuxièmement, nous avons besoin d'informations sur votre adresse</li>
-    <li>Ensuite, nous devons connaître votre mode de paiement préféré.</li>
-    <li>Si vous souhaitez utiliser SEPA, nous avons besoin de vos informations bancaires. Sinon, vous devez envoyer vous-même l'argent.</li>
-    <li>Enfin, si vous avez terminé, il vous suffit de signer le document et vous avez terminé!</li>
-</ul>
-<h3> Si vous souhaitez commencer maintenant, appuyez simplement sur le bouton de démarrage.</h3>
-<input type="submit" value="START" onclick="">
+<form action="">
+    <h1>Bienvenue dans notre GEZ-help!</h1>
+    <h2>Vous avez demandé de l'aide pour un document gez.</h2>
+    <p>GEZ est la redevance de diffusion ici en Allemagne. Chaque appartement doit le payer, donc il n'y a pas
+        d'échappatoire, si vous voulez vivre en Allemagne.</p>
+    <p>Vous devez également être âgé d'au moins 18 ans pour payer les frais de licence.</p>
+    <p>Après avoir soumis le formulaire, vous devrez payer les frais régulièrement.</p>
+    <p>Bien que cela puisse être ennuyeux de payer, vous ne devez remplir le document qu'une seule fois, tant que vous
+        vivez dans votre appartement actuel.</p>
+    <p>Les médias publics sont soutenus par cet argent. Ces médias sont indépendants des entreprises privées qui veulent
+        manipuler la portée du droit public à leurs propres fins.</p>
+    <h3>Nous divisons le document en plusieurs petites parties.</h3>
+    <ul>
+        <li>Tout d'abord, nous avons besoin de vos informations générales, telles que votre nom ou votre date de
+            naissance</li>
+        <li>Deuxièmement, nous avons besoin d'informations sur votre adresse</li>
+        <li>Ensuite, nous devons connaître votre mode de paiement préféré.</li>
+        <li>Si vous souhaitez utiliser SEPA, nous avons besoin de vos informations bancaires. Sinon, vous devez envoyer
+            vous-même l'argent.</li>
+        <li>Enfin, si vous avez terminé, il vous suffit de signer le document et vous avez terminé!</li>
+    </ul>
+    <h3> Si vous souhaitez commencer maintenant, appuyez simplement sur le bouton de démarrage.</h3>
+    <li>
+        <input type="submit" value="START" onclick="">
+    </li>
+</form>
+
 {% endblock %}
