--- a/templates/de/gez_explanation.html
+++ b/templates/de/gez_explanation.html
@@ -1,31 +1,34 @@
 {% extends 'de/de_base.html' %}
 
-{% block head %} 
-<title>GEZ</title> 
+{% block head %}
+<title>GEZ</title>
 {% endblock %}
 {% block body %}
 <form action="/{{language}}/gez/gez_explanation" method='POST'>
-<h1>Willkommen zu unserer GEZ-Hilfe!</h1>
-<h2>Sie haben Hilfe für die Bearbeitung Ihr GEZ-Formular beantragt</h2>
-<p>GEZ ist die Rundfunkgebühr hier in Deutschland. Jede Wohnung muss diese Gebühren bezahlen, also kann man diese nicht entkommen, wenn man ein ruhiges Leben in Deutschland führen will. Glücklicherweise muss man die Gebühren 
-    nur einmal pro Wohnung bezahlen.</p>
-<p>Desweiterem müssen Sie mindestens 18 Jahre alt sein, um Rundfunkgebühr zu bezahlen.</p>
-<p>Nach der Einreichung des Formulars müssen Sie die Gebühren regelmäßig bezahlen.</p>
-<p>Auch wenn es nervig sein kann, müssen Sie glücklicherweise dieses Formular nur einmal versenden, solange Sie nicht Ihren Wohnsitz ändern. In diesem Falle müssen Sie das dem Staat melden.</p>
-<p>Mit diesen Geldern werden die öffentlich rechtlichen Medien unterstützt. Diese Medien sind unabhängig gegenüber privat Unternehmen die die Reichweite der öffentlich Rechtlichen manipulieren wollen für ihre eigene Zwecke.</p>
-<h3>Wir teilen das Dokument in mehrere Untergruppen, wodurch das ausfüllen leichter wird:</h3>
-<ul>
-    <li>Zuerst benötigen wir Ihre allgemeine Daten, wie zum Beispiel Ihren Namen oder Ihren Geburtstag</li>
-    <li>Daraufhin benötigen wir noch Ihre Adresse</li>
-    <li>Desweiterem müssen wir Ihre bevorzugte Bezahlungsart wissen.</li>
-    <li>Falls Sie die Gebühr über eine SEPA Lastschrift bezahlen wollen benötigen wir Ihre Bankdaten. Ansonsten müssen Sie die Überweisung später selber durchführen.</li>
-    <li>Und zu guter Letzt müssen Sie das Dokument unterschreiben und dann ist das Formular absendbereit!</li>
-    <li></li>
-</ul>
-<h3> Wenn Ihr jetzt starten wollen, dann klicken Sie auf den Start-Button und schon können Sie beginnen!</h3>
-<ul>
-    <li><input type="submit" value="START" onclick=""></li>
-</ul>
-
+    <h1>Willkommen zu unserer GEZ-Hilfe!</h1>
+    <h2>Sie haben Hilfe für die Bearbeitung Ihr GEZ-Formular beantragt</h2>
+    <p>GEZ ist die Rundfunkgebühr hier in Deutschland. Jede Wohnung muss diese Gebühren bezahlen, also kann man diese
+        nicht entkommen, wenn man ein ruhiges Leben in Deutschland führen will. Glücklicherweise muss man die Gebühren
+        nur einmal pro Wohnung bezahlen.</p>
+    <p>Desweiterem müssen Sie mindestens 18 Jahre alt sein, um Rundfunkgebühr zu bezahlen.</p>
+    <p>Nach der Einreichung des Formulars müssen Sie die Gebühren regelmäßig bezahlen.</p>
+    <p>Auch wenn es nervig sein kann, müssen Sie glücklicherweise dieses Formular nur einmal versenden, solange Sie
+        nicht Ihren Wohnsitz ändern. In diesem Falle müssen Sie das dem Staat melden.</p>
+    <p>Mit diesen Geldern werden die öffentlich rechtlichen Medien unterstützt. Diese Medien sind unabhängig gegenüber
+        privat Unternehmen die die Reichweite der öffentlich Rechtlichen manipulieren wollen für ihre eigene Zwecke.</p>
+    <h3>Wir teilen das Dokument in mehrere Untergruppen, wodurch das ausfüllen leichter wird:</h3>
+    <ul>
+        <li>Zuerst benötigen wir Ihre allgemeine Daten, wie zum Beispiel Ihren Namen oder Ihren Geburtstag</li>
+        <li>Daraufhin benötigen wir noch Ihre Adresse</li>
+        <li>Desweiterem müssen wir Ihre bevorzugte Bezahlungsart wissen.</li>
+        <li>Falls Sie die Gebühr über eine SEPA Lastschrift bezahlen wollen benötigen wir Ihre Bankdaten. Ansonsten
+            müssen Sie die Überweisung später selber durchführen.</li>
+        <li>Und zu guter Letzt müssen Sie das Dokument unterschreiben und dann ist das Formular absendbereit!</li>
+        <li></li>
+    </ul>
+    <h3> Wenn Ihr jetzt starten wollen, dann klicken Sie auf den Start-Button und schon können Sie beginnen!</h3>
+    <ul>
+        <li><input type="submit" value="START" onclick=""></li>
+    </ul>
 </form>
 {% endblock %}
