--- a/templates/en/gez_explanation.html
+++ b/templates/en/gez_explanation.html
@@ -1,30 +1,33 @@
 {% extends 'en/en_base.html' %}
 
-{% block head %} 
-<title>GEZ</title> 
+{% block head %}
+<title>GEZ</title>
 {% endblock %}
 {% block body %}
 <form action="/{{language}}/gez/gez_explanation" method='POST'>
-<h1>Welcome to our GEZ-help!</h1>
-<h2>You requested some help for a gez-document.</h2>
-<p>GEZ is the broadcast fee here in Germany. Every apartment has to pay it, so there is no escape from it, if you want to live in germany.Thankfully you only have to pay it once per apartment</p>
-<p>Moreover you have to be 18 years old to pay GEZ. </p>
-<p>After you sent the fullfilled document you have to pay the fee regurlary.</p>
-<p>While it can be annoying to pay, you only have to fill out the document once, as long as you live in your current apartment.</p>
-<p>With this money, media under public law will be funded. Due to this decision this decision those media work independent without the influance of any big company that wants to abuse the media for their influence.</p>
-<h3>We devide the document into multiple little parts.</h3>
-<ul>
-    <li>First of all we need your general informations, such as your name or your birth date</li>
-    <li>Secondly we need informations about your adress</li>
-    <li>Afterwards we need to know your prefered payment method.</li>
-    <li>If you like to use SEPA we need your banking information. Otherwise you have to send the money on your own.</li>
-    <li>Finally, if you are done, you just have to sign the document and you are done!</li>
-    <li></li>
-</ul>
-<h3> If you like to start now, just press the start button.</h3>
-<ul>
-    <li><input type="submit" value="START" onclick=""></li>
-</ul>
-
+    <h1>Welcome to our GEZ-help!</h1>
+    <h2>You requested some help for a gez-document.</h2>
+    <p>GEZ is the broadcast fee here in Germany. Every apartment has to pay it, so there is no escape from it, if you
+        want to live in germany.Thankfully you only have to pay it once per apartment</p>
+    <p>Moreover you have to be 18 years old to pay GEZ. </p>
+    <p>After you sent the fullfilled document you have to pay the fee regurlary.</p>
+    <p>While it can be annoying to pay, you only have to fill out the document once, as long as you live in your current
+        apartment.</p>
+    <p>With this money, media under public law will be funded. Due to this decision this decision those media work
+        independent without the influance of any big company that wants to abuse the media for their influence.</p>
+    <h3>We devide the document into multiple little parts.</h3>
+    <ul>
+        <li>First of all we need your general informations, such as your name or your birth date</li>
+        <li>Secondly we need informations about your adress</li>
+        <li>Afterwards we need to know your prefered payment method.</li>
+        <li>If you like to use SEPA we need your banking information. Otherwise you have to send the money on your own.
+        </li>
+        <li>Finally, if you are done, you just have to sign the document and you are done!</li>
+        <li></li>
+    </ul>
+    <h3> If you like to start now, just press the start button.</h3>
+    <ul>
+        <li><input type="submit" value="START"></li>
+    </ul>
 </form>
 {% endblock %}
