--- a/templates/fr/gez_explanation.html
+++ b/templates/fr/gez_explanation.html
@@ -29,7 +29,7 @@
     </ul>
     <h3> Si vous souhaitez commencer maintenant, appuyez simplement sur le bouton de démarrage.</h3>
     <li>
-        <input type="submit" value="START" onclick="">
+        <input type="submit" value="Démarrer" onclick="">
     </li>
 </form>
 
