Problem in french fixed

--- a/templates/fr/gez_explanation.html
+++ b/templates/fr/gez_explanation.html
@@ -6,7 +6,7 @@
 <title>GEZ</title>
 {% endblock %}
 {% block body %}
-<form action="">
+<form action="/{{language}}/gez/gez_explanation" method="POST">
     <h1>Bienvenue dans notre GEZ-help!</h1>
     <h2>Vous avez demandé de l'aide pour un document gez.</h2>
     <p>GEZ est la redevance de diffusion ici en Allemagne. Chaque appartement doit le payer, donc il n'y a pas
