--- a/templates/bg/welcome.html
+++ b/templates/bg/welcome.html
@@ -7,10 +7,7 @@
 {% block body %}
 
 <form id="welcometext">
-    <h1>
-        Добре дошли!
-    </h1>
-    <p>Добре дошли в нашия уебсайт! </p>
+    <h1>Добре дошли в нашия уебсайт! </h1>
     <p>
         Нашият екип A-5 е тук, за да ви предостави възможно най-добрата помощ, която можете да получите, за да попълните
         всички документи, с които
