--- a/templates/de/welcome.html
+++ b/templates/de/welcome.html
@@ -7,10 +7,7 @@
 {% block body %}
 
 <form id="welcometext">
-    <h1>
-        Willkomen!
-    </h1>
-    <p>Willkomen zu unserer Website! </p>
+    <h1>Willkomen zu unserer Website! </h1>
     <p>Wir sind Team A-5 und wir sind hier um Ihnen bei der Ausfüllung Ihrer Dokumente auszuhelfen, damit Sie
         ein sorgenloses Leben in Deutschlangd haben!
         Wir arbeiten daran jegliche notwendige Information für Sie zu übersetzen, als auch jeglichen Schritt genauestens
