--- a/templates/fr/welcome.html
+++ b/templates/fr/welcome.html
@@ -8,10 +8,7 @@
 {% block body %}
 
 <form id="welcometext">
-<h1>
-    Bienvenue!
-</h1>
-<p>Bienvenue sur notre site! </p>
+<h1>Bienvenue sur notre site! </h1>
 <p >
     Notre équipe A-5 est là pour vous fournir la meilleure aide possible pour remplir tous les documents dont vous disposez
     à finir pour une vie sauve et facile en allemagne!
